Fix spin blur z-index, close #6759

--- a/components/spin/style/index.less
+++ b/components/spin/style/index.less
@@ -101,6 +101,7 @@
       background: #fff;
       opacity: 0.3;
       transition: all .3s;
+      z-index: 10;
     }
   }
 
